revert 17395 while I fix build breakage caused by it
git-svn-id: https://svn.terracotta.org/repo/tc/dso/trunk@17396 7fc7bbf3-cf45-46d4-be06-341739edd864